--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ logging.level.com.pavan.gatewayserver=DEBUG
 spring.sleuth.sampler.rate=1
 spring.zipkin.base-url=http://localhost:9411
 
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://localhost:7080/realms/master/protocol/openid-connect/certs
+
 #spring.zipkin.sender.type=rabbit
 #spring.zipkin.rabbitmq.queue=zipkin
 #spring.rabbitmq.host=localhost
